--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^1.0.0",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "google-charts": "^2.0.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "source-map": "^0.7.3",
@@ -25,5 +26,9 @@
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "@types/google.visualization": "0.0.51",
+    "axios": "^0.19.0"
   }
 }
