--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@types/google.visualization": "0.0.51",
+    "@types/node": "^12.12.17",
     "axios": "^0.19.0"
   }
 }
